--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -3,7 +3,7 @@ name: Daily Southeast Asia News (AI Summary)
 on:
   schedule:
     - cron: "0 1 * * *"  # 每天北京时间早上9点执行
-  workflow_dispatch:  # 手动触发也可以
+  workflow_dispatch:
 
 jobs:
   run-news-bot:
@@ -18,7 +18,9 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
-        run: pip install requests feedparser
+        run: |
+          pip install --upgrade pip
+          pip install requests feedparser googletrans==4.0.0-rc1 python-dotenv
 
       - name: Run news bot
         env:
