--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -1,29 +1,30 @@
-name: Daily Southeast Asia News (AI Summary)
+name: Daily News Bot
 
 on:
   schedule:
-    - cron: "0 1 * * *"  # 每天北京时间早上9点执行
+    - cron: '0 10 * * *'  # 每天 10:00 UTC 运行
   workflow_dispatch:
 
 jobs:
   run-news-bot:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.14'
 
       - name: Install dependencies
         run: |
-          pip install --upgrade pip
-          pip install requests feedparser googletrans==4.0.0-rc1 python-dotenv
+          python -m pip install --upgrade pip
+          pip install requests feedparser googletrans==4.0.0-rc1
 
       - name: Run news bot
         env:
+          OPENWEATHER_API_KEY: ${{ secrets.OPENWEATHER_API_KEY }}
           FEISHU_WEBHOOK: ${{ secrets.FEISHU_WEBHOOK }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        run: python news_bot.py
+        run: python news_bot_py.py
