--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -1,30 +1,35 @@
-name: Daily News Bot
+name: Southeast Asia News Bot
 
 on:
+  push:
+    branches: [ main ]
   schedule:
-    - cron: '0 10 * * *'  # 每天 10:00 UTC 运行
+    - cron: '0 2 * * *'  # 每天 UTC 2 点运行一次
   workflow_dispatch:
 
 jobs:
-  run-news-bot:
+  build:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        python-version: [3.10]
+
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.14'
+          python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests feedparser googletrans==4.0.0-rc1
+          pip install -r requirements.txt
 
-      - name: Run news bot
+      - name: Run News Bot
         env:
           OPENWEATHER_API_KEY: ${{ secrets.OPENWEATHER_API_KEY }}
-          FEISHU_WEBHOOK: ${{ secrets.FEISHU_WEBHOOK }}
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: python news_bot.py
