--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -1,35 +1,38 @@
-name: Southeast Asia News Bot
+# 文件名: .github/workflows/news.yml
+name: Run Southeast Asia News Bot
 
 on:
-  push:
-    branches: [ main ]
   schedule:
-    - cron: '0 2 * * *'  # 每天 UTC 2 点运行一次
-  workflow_dispatch:
+    # 每天 UTC 2 点触发
+    - cron: '0 2 * * *'
+  workflow_dispatch: # 允许手动触发
 
 jobs:
-  build:
+  run-news-bot:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        python-version: [3.10]
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      # 拉取代码
+      - uses: actions/checkout@v3
 
+      # 设置 Python 3.14
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.14
 
+      # 安装依赖
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install requests feedparser googletrans==4.0.0-rc1
 
-      - name: Run News Bot
-        env:
-          OPENWEATHER_API_KEY: ${{ secrets.OPENWEATHER_API_KEY }}
-        run: python news_bot.py
+      # 设置环境变量（API Key）
+      - name: Set environment variables
+        run: |
+          echo "OPENWEATHER_API_KEY=${{ secrets.OPENWEATHER_API_KEY }}" >> $GITHUB_ENV
+
+      # 运行脚本
+      - name: Run news bot
+        run: |
+          python news_bot.py
