--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -2,28 +2,29 @@ name: run-news-bot
 
 on:
   schedule:
-    - cron: '0 2 * * *'  # UTC 2点，每天执行
+    - cron: '0 2 * * *'  # 每天 UTC 2 点执行
   workflow_dispatch:
 
 jobs:
-  run:
+  news:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.14'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.14'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install requests feedparser googletrans==4.0.0-rc1
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests feedparser googletrans==4.0.0-rc1
 
-    - name: Run news bot
-      env:
-        OPENWEATHER_API_KEY: ${{ secrets.OPENWEATHER_API_KEY }}
-        FEISHU_WEBHOOK: ${{ secrets.FEISHU_WEBHOOK }}
-      run: python news_bot.py
+      - name: Run news bot
+        env:
+          OPENWEATHER_API_KEY: ${{ secrets.OPENWEATHER_API_KEY }}
+          FEISHU_WEBHOOK: ${{ secrets.FEISHU_WEBHOOK }}
+        run: |
+          python news_bot.py
