--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -2,30 +2,30 @@ name: run-news-bot
 
 on:
   schedule:
-    # 每天 2:00 UTC 运行（北京时间 10:00）
+    # 每天 2:00 UTC（= 北京时间 10:00）自动运行
     - cron: '0 2 * * *'
   workflow_dispatch:
 
 jobs:
-  run:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 检出仓库
-        uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-      - name: 设置 Python 环境
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.12'  # ✅ 推荐使用 3.12，兼容性最好
+          python-version: '3.12'
 
-      - name: 安装依赖
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install requests feedparser googletrans==4.0.0-rc1
 
-      - name: 运行新闻机器人
+      - name: Run news bot
         env:
           OPENWEATHER_API_KEY: ${{ secrets.OPENWEATHER_API_KEY }}
-          FEISHU_WEBHOOK_URL: ${{ secrets.FEISHU_WEBHOOK_URL }}
+          FEISHU_WEBHOOK: ${{ secrets.FEISHU_WEBHOOK }}
         run: python news_bot.py
